--- a/Views/Product/Category.cshtml
+++ b/Views/Product/Category.cshtml
@@ -2,8 +2,9 @@
 
 <div class="bg-primary m-1 p-1 text-white"><h4>Blog Listing</h4></div>
 <ul>
-  @foreach (Category categoryid in Model)
+  @foreach (Category categoryId in Model)
   {
-    <li>@CategoryName</li>
+    <li>@categoryId</li>
   }
-</ul>
+</ul> 
+
