--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -6,14 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         @RenderBody()
     </div>
+<a href="@Url.Action("Category", "Product")" class="list-group-item list-group-item-action bg-light">Categories</a>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <!-- navbar brand -->
+        <a class="navbar-brand" href="#"><i class="fa-regular fa-compass"></i> Northwind</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        <!-- navbar content that is collapsible -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- list of all nav items -->
+            <ul class="navbar-nav mr-auto">
+                <!-- nav item dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="productDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-database"></i> Products
+                    </a>
+                    <!-- nav items -->
+                    <div class="dropdown-menu" aria-labelledby="productDropdown">
+                        <a class="dropdown-item" href="#"><i class="fas fa-list-ul"></i> Browse Categories</a>
+                        <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Product Search</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Current Discounts</a>
+                    </div>
+                </li>
+                <!-- nav item dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-users"></i> Customers
+                    </a>
+                    <!-- nav items -->
+                    <div class="dropdown-menu" aria-labelledby="customerDropdown">
+                        <a class="dropdown-item" href="#"><i class="fas fa-user"></i> Account</a>
+                        <a class="dropdown-item" href="#"><i class="far fa-address-card"></i> Register</a>
+                        <a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Sign In</a>
+                    </div>
+                </li>
+            </ul>
+            <!-- search form in navbar -->
+            <form class="form-inline ml-auto d-none d-md-block">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search Products" aria-label="Search">
+                <button class="btn btn-danger my-2 my-sm-0" type="submit"><i class="fas fa-search"></i><span class="sr-only">Search</span></button>
+            </form>
+        </div>
+    </nav>
+    <!-- container -->
+    <div class="container-fluid">
+        <!-- jumbotron -->
+        <div class="jumbotron">
+            <h1 class="display-4 logo">Northwind</h1>
+            <p class="lead">We have the best prices and selection of high quality food &amp; beverages on the planet! Check out our featured discounts below.</p>
+            <hr class="my-4">
+            <p>For spectacular international quisine, look no further.</p>
+            <a class="btn btn-outline-primary btn-lg" href="#" role="button">Order now <i class="fas fa-angle-double-right"></i></a>
+        </div>
     <!-- jquery -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>    
 </body>
 </html>
+
