--- a/Views/Product/Category.cshtml
+++ b/Views/Product/Category.cshtml
@@ -2,9 +2,9 @@
 
 <div class="bg-primary m-1 p-1 text-white"><h4>Blog Listing</h4></div>
 <ul>
-  @foreach (Category categoryId in Model)
+  @foreach (Category category in Model)
   {
-    <li>@categoryId</li>
+    <li>@category</li>
   }
 </ul> 
 
