--- a/Views/Product/Category.cshtml
+++ b/Views/Product/Category.cshtml
@@ -2,9 +2,9 @@
 
 <div class="bg-primary m-1 p-1 text-white"><h4>Blog Listing</h4></div>
 <ul>
-  @foreach (Category name in Model)
+  @foreach (Category categories in Model)
   {
-    <li>@name</li>
+    <li>@categories</li>
   }
 </ul> 
 
