--- a/Views/Product/Category.cshtml
+++ b/Views/Product/Category.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<Category>
 
-<div class="bg-primary m-1 p-1 text-white"><h4>Category</h4></div>
+<div class="bg-primary m-1 p-1 text-white"><h4>Categories</h4></div>
 <ul>
   @foreach (Category category in Model)
   {
