--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,48 +15,37 @@
         @RenderBody()
     </div>
 <a href="@Url.Action("Category", "Product")" class="list-group-item list-group-item-action bg-light">Categories</a>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <!-- navbar brand -->
-        <a class="navbar-brand" href="#"><i class="fa-regular fa-compass"></i> Northwind</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        <!-- navbar content that is collapsible -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- list of all nav items -->
-            <ul class="navbar-nav mr-auto">
-                <!-- nav item dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="productDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-database"></i> Products
-                    </a>
-                    <!-- nav items -->
-                    <div class="dropdown-menu" aria-labelledby="productDropdown">
-                        <a class="dropdown-item" href="#"><i class="fas fa-list-ul"></i> Browse Categories</a>
-                        <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Product Search</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#"><i class="fas fa-tags"></i> Current Discounts</a>
-                    </div>
-                </li>
-                <!-- nav item dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="customerDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-users"></i> Customers
-                    </a>
-                    <!-- nav items -->
-                    <div class="dropdown-menu" aria-labelledby="customerDropdown">
-                        <a class="dropdown-item" href="#"><i class="fas fa-user"></i> Account</a>
-                        <a class="dropdown-item" href="#"><i class="far fa-address-card"></i> Register</a>
-                        <a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Sign In</a>
-                    </div>
-                </li>
-            </ul>
-            <!-- search form in navbar -->
-            <form class="form-inline ml-auto d-none d-md-block">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search Products" aria-label="Search">
-                <button class="btn btn-danger my-2 my-sm-0" type="submit"><i class="fas fa-search"></i><span class="sr-only">Search</span></button>
-            </form>
-        </div>
-    </nav>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="far fa-compass"></i> Northwind</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-database"></i> Products
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-controller="Product" asp-action="Category"><i class="fas fa-list-ul"></i> Browse Categories</a>
+                                <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Product Search</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#"><i class="fas fa-tag"></i> Current Discounts</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fas fa-users"></i> Customers</a>
+                        </li>
+                    </ul>
+                </div>
+                <form class="form-inline my-2 my-lg-0 d-none d-md-inline">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Product Search" aria-label="Search">
+                    <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i><span class="sr-only">Search</span></button>
+                </form>
+            </div>
+        </nav>
     <!-- container -->
     <div class="container-fluid">
         <!-- jumbotron -->
@@ -71,6 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>    
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
 
