--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <!-- client -->
     <link rel="stylesheet" href="~/css/client.css" />
+    <link rel="stylesheet" href="~/js/Client.js"/>
 </head>
 <body>
     <header>
