--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -21,6 +21,18 @@
     }
 </div>
 
+<div id="toast" class="toast">
+        <div class="toast-header">
+            <strong class="mr-auto" id="product">Product Name</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            Discount Code: <strong id="code">CODE</strong>
+        </div>
+    </div>
+
 @section Scripts {
     <script type="text/javascript" src="~/js/client.js"></script>
 }
