--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <!-- client -->
-    <link rel="stylesheet" href="~/css/client.css" />
+    <link href="css/Client.css" rel="stylesheet" />
     </head>
 <body>
     <header>
