Updated index file

--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -22,5 +22,5 @@
 </div>
 
 @section Scripts {
-    <script type="text/javascript" src="~/js/client.js"></script>
+    <script type="text/javascript" src="~/js/Client.js"></script>
 }
