--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,6 +48,13 @@
             </div>
         </nav>
     </header>
+    <div class="jumbotron my-2 border border-secondary">
+    <h1 class="display-4">Northwind</h1>
+    <p class="lead">We have the best prices and selection of high quality foods &amp; beverages on the planet! Check out our featured discounts below.</p>
+    <hr class="my-4">
+    <p>For exceptional international quisuine, look no further.</p>
+    <a class="btn btn-outline-primary btn-lg" href="#" role="button">Order Now</a>
+</div>
     <div id="toast" class="toast">
         <div class="toast-header">
             <strong class="mr-auto" id="product">Product Name</strong>
