--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -14,6 +14,16 @@
         </div>
     }
 </div>
+<div id="toast" class="toast">
+        <div class="toast-header">
+            <strong class="mr-auto" id="product">Product Name</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">Close</button>
+                <span aria-hidden="true">&times;</span>
+    
+        </div>
+        <div class="toast-body">
+            Discount Code: <strong id="code">2222</strong>
+        </div>
 
 @section Scripts {
     <script type="text/javascript" src="~/js/Client.js"></script>
