--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,6 +56,16 @@
     <a class="btn btn-outline-primary btn-lg" href="#" role="button">Order Now</a>
 </div>
     </div>
+    <div id="toast" class="toast">
+        <div class="toast-header">
+            <strong class="mr-auto" id="product">Product Name</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">Close</button>
+                <span aria-hidden="true">&times;</span>
+    
+        </div>
+        <div class="toast-body">
+            Discount Code: <strong id="code">2222</strong>
+        </div>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
