--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,7 +59,16 @@
             @RenderBody()
         </main>
     </div>
-
+    <div id="toast" class="toast">
+        <div class="toast-header">
+            <strong class="mr-auto" id="product">Product Name</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">Close</button>
+                <span aria-hidden="true">&times;</span>
+        </div>
+        <div class="toast-body">
+            Discount Code: <strong id="code">2222</strong>
+        </div>
+    </div>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - Northwind
